--- a/SaudaMasterApp/SaudaMaster.Web/Views/Categories/Index.cshtml
+++ b/SaudaMasterApp/SaudaMaster.Web/Views/Categories/Index.cshtml
@@ -1,52 +1,97 @@
-﻿@model IEnumerable<SaudaMaster.Data.Category>
-
+﻿
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<section id="main-content">
+    <section class="wrapper site-min-height">
+        <!-- page start-->
+        <div class="row">
+            <div class="col-lg-12">
+                <section class="panel">
+                    <header class="panel-heading">
+                        Create New Category
+                    </header>
+                    <div class="panel-body">
+                        <form role="form">
+                            <div class="form-group">
+                                <input type="email" class="form-control input-lg m-bot15" id="exampleInputEmail1" placeholder="Enter Category Name">
+                            </div>
+                            <div class="form-group">
+                                <input type="password" class="form-control input-lg m-bot15" id="exampleInputPassword1" placeholder="Enter Category Display Name">
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleInputFile">Category Image</label>
+                                <input type="file" id="exampleInputFile">
+                                <p class="help-block">Add category image here</p>
+                            </div>
+                            <button type="submit" class="btn btn-shadow btn-primary pull-right"><i class="fa fa-plus"></i> Add Category</button>
+                        </form>
+                    </div>
+                </section>
+            </div>
+            </div>
+        <div class="row">
+            <div class="col-md-12">
+                <header class="panel-heading">
+                    Brands
+                </header>
+                <table class="table table-striped table-advance table-hover">
+                    <thead>
+                        <tr>
+                            <th>
+                                Category Name
+                            </th>
+                            <th>
+                               Category Display Name
+                            </th>
+                            <th>
+                              Category image
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                          <td>HouseHold</td>
+                          <td>House</td>
+                          <td>Images</td>
+                      </tr>
+                        <tr>
+                            <td>HouseHold</td>
+                            <td>House</td>
+                            <td>Images</td>
+                        </tr>
+                        <tr>
+                            <td>HouseHold</td>
+                            <td>House</td>
+                            <td>Images</td>
+                        </tr>
+                        <tr>
+                            <td>HouseHold</td>
+                            <td>House</td>
+                            <td>Images</td>
+                        </tr>
+                        <tr>
+                            <td>HouseHold</td>
+                            <td>House</td>
+                            <td>Images</td>
+                        </tr>
+                        <tr>
+                            <td>HouseHold</td>
+                            <td>House</td>
+                            <td>Images</td>
+                        </tr>
+                        <tr>
+                            <td>HouseHold</td>
+                            <td>House</td>
+                            <td>Images</td>
+                        </tr>
 
-<h2>Index</h2>
+                          
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.CategoryName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CategoryDisplayName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CategoryImage)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Store.StoreName)
-        </th>
-        <th></th>
-    </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.CategoryName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CategoryDisplayName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CategoryImage)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Store.StoreName)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.CategoryID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.CategoryID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.CategoryID })
-        </td>
-    </tr>
-}
-
-</table>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </section>
+</section>
